--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Build container image
@@ -14,15 +14,22 @@ jobs:
           --iidfile meow.id .
       - name: Test container image
         run: test "$(docker run --rm $(cat meow.id))" = "Meow! =^.^="
-      - name: Tag container image
-        run: >
-          docker tag $(cat meow.id)
-          ghcr.io/${{ github.repository_owner }}/hello-ghcr-meow:beta
       - name: Show image information
-        run: >
-          docker image inspect
-          ghcr.io/${{ github.repository_owner }}/hello-ghcr-meow:beta
+        run: |
+          docker image inspect $(cat meow.id)
+      - name: Generate container tag(s)
+        run: |
+          TAGS=$(python3 tag-from-ref.py ${{ github.ref }})
+          echo "::set-env name=TAGS::${TAGS}"
+      - name: Tag container image
+        if: ${{ env.TAGS }}
+        run: |
+          id=$(cat meow.id)
+          for t in ${TAGS}; do
+              docker tag ${id} ghcr.io/${{ github.repository_owner }}/hello-ghcr-meow:${t}
+          done
       - name: Docker login
+        if: ${{ env.TAGS }}
         env:
           GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
         run: >
@@ -30,9 +37,11 @@ jobs:
           docker login ghcr.io -u ${{ github.repository_owner }}
           --password-stdin
       - name: Push the container image
-        run: >
-          docker push
-          ghcr.io/${{ github.repository_owner }}/hello-ghcr-meow:beta
+        if: ${{ env.TAGS }}
+        run: |
+          for t in ${TAGS}; do
+              docker push ghcr.io/${{ github.repository_owner }}/hello-ghcr-meow:${t}
+          done
       - name: Docker logout
         if: always()
         run: |
