--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,9 @@ jobs:
           --label org.opencontainers.image.revision=${{ github.sha }}
           --iidfile meow.id .
       - name: Test container image
-        run: test "$(docker run --rm $(cat meow.id))" = "Meow! =^.^="
+        run: |
+          test "$(docker run --rm $(cat meow.id))" = "Meow! =^.^="
+          test "$(docker run --rm $(cat meow.id) 2)" = "Meow! Meow! =^.^="
       - name: Show image information
         run: |
           docker image inspect $(cat meow.id)
