--- a/.github/workflows/scan_images.yaml
+++ b/.github/workflows/scan_images.yaml
@@ -1,7 +1,7 @@
-name: Scan images
+name: Scan existing images
 on:
   schedule:
-    - cron:  '45 18 * * *'
+    - cron:  '5 19 * * *'
 
 jobs:
   build:
