--- a/.github/workflows/scan_images.yaml
+++ b/.github/workflows/scan_images.yaml
@@ -1,7 +1,7 @@
 name: Scan existing images
 on:
   schedule:
-    - cron:  '5 19 * * *'
+    - cron:  '5 20 * * *'
 
 jobs:
   build:
@@ -14,6 +14,7 @@ jobs:
     name: ${{ matrix.label }}
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - name: Docker login
         if: ${{ env.TAGS }}
         env:
