--- a/.github/workflows/scan_images.yaml
+++ b/.github/workflows/scan_images.yaml
@@ -1,7 +1,8 @@
 name: Scan existing images
 on:
   schedule:
-    - cron: '10 21 * * *'
+    - cron: '10 3 * * SAT'
+  workflow_dispatch:
 
 jobs:
   build:
