Check Dependabot changes via pull_request events, not push

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,11 @@
 name: Meow Container
 on:
   push:
+    branches:
+      - '**'
+      - '!dependabot/**'
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
