Use GITHUB_TOKEN for GHCR access now that it's possible
See: https://github.blog/changelog/2021-03-24-packages-container-registry-now-supports-github_token/

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Docker login
         if: ${{ env.TAGS }}
         env:
-          GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+          GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: >
           echo ${GHCR_TOKEN} |
           docker login ghcr.io -u ${{ github.repository_owner }}
