--- a/.github/workflows/prune_images.yaml
+++ b/.github/workflows/prune_images.yaml
@@ -17,6 +17,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+          cache: 'pip'
+          cache-dependency-path: |
+            .github/workflows/prune_images.yaml
+      - name: Install requests
+        run: pip install requests
       - name: Prune untagged images
         env:
           GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
